# repro-zipfile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  repro_zipfile.py  reprozip.py  tests.py
.github/workflows/: release-cli.yml  release-lib.yml  release.yml  tests.yml
cli/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  repro_zipfile_cli.py  rpzip.py
examples/: demo_vs_zipfile.py  usage.py
repro_zipfile/: __init__.py  __init__.pyi  _impl.py
tests/: conftest.py  test_cli.py  test_core.py  utils.py
