[project]
name = "repro-zipfile"
version = "0.4.1"
description = "A tiny, zero-dependency replacement for Python's zipfile.ZipFile for creating reproducible/deterministic ZIP archives."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["zipfile", "zip", "reproducible", "deterministic"]
authors = [{ name = "DrivenData", email = "info@drivendata.org" }]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Archiving :: Packaging",
]
dependencies = []

[project.optional-dependencies]
cli = ["rpzip"]

[project.urls]
Documentation = "https://github.com/drivendataorg/repro-zipfile#readme"
Issues = "https://github.com/drivendataorg/repro-zipfile/issues"
Source = "https://github.com/drivendataorg/repro-zipfile"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## DEV ##

[tool.uv.sources]
rpzip = { workspace = true }

[tool.uv.workspace]
members = ["cli/"]

[dependency-groups]
dev = [
  "ipython",
  "vspect",
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "test" },
]
lint = [
  "ruff>=0.1.14",
]
test = [
  "coverage>=6.5",
  "pytest>=6,<8",
  "pytest-cases",
  "pytest-cov",
]
typecheck = [
  "mypy>=1.0.0",
]

## TOOLS ##

[tool.ruff]
line-length = 99
src = ["repro_zipfile", "cli", "tests", "examples"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["repro_zipfile", "rpzip"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=repro_zipfile --cov=rpzip --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.paths]
repro_zipfile = [
  "repro_zipfile/",
  "**/site-packages/repro_zipfile/",
]
rpzip = [
  "cli/",
  "**/site-packages/",
]
